fixed style for swiper width and scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,15 +5,7 @@
   background-color: white;
   max-width: 400px;
   margin: 0 auto;
-  padding: 20px 22px 30px;
+  padding: 20px 12px 30px;
 }
 
-.main {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  flex-wrap: wrap;
-  max-width: 400px;
-  margin: 0 auto;
-}
+
