--- a/src/pages/EditCardPage/EditCardPage.module.scss
+++ b/src/pages/EditCardPage/EditCardPage.module.scss
@@ -53,3 +53,12 @@
 .error {
   color: rgb(255, 0, 0);
 }
+
+.hidden {
+  opacity: 0;
+  height: 0;
+  width: 0;
+  line-height: 0;
+  padding: 0;
+  margin: 0;
+}
